--- a/pom.xml
+++ b/pom.xml
@@ -72,5 +72,12 @@
             <artifactId>junit-platform-launcher</artifactId>
             <version>${junit.platform.version}</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-api</artifactId>
+            <version>5.7.0</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 </project>
