--- a/pom.xml
+++ b/pom.xml
@@ -107,7 +107,11 @@
             <artifactId>httpmime</artifactId>
             <version>4.5.6</version>
         </dependency>
-
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <version>1.2.11</version>
+        </dependency>
 
 
     </dependencies>
